<resources>
    <string name="app_name">Groover</string>
    <string name="activity_login">ログイン</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="serial_no">NESiCA Serial No.</string>
    <string name="password">Password</string>
    <string name="login_attention">これらの情報はアプリ内データに保存され、自動ログインの際に使用されます。また、ログインに数回失敗すると１時間ログインができなくなりますのでご注意ください。</string>
    <string name="login_button">ログイン</string>

    <string name="pref_serial_no">pref_serial_no</string>
    <string name="pref_password">pref_password</string>
    <string name="pref_login_cookie">pref_login_cookie</string>

    <string name="toolbar_music_list_search">Search</string>
    <string name="toolbar_music_list_sort">Sort</string>
    <string name="toolbar_music_list_filter">Filter</string>

    <string name="request_login">req_login</string>

    <string name="param_serial_no">nesicaCardId</string>
    <string name="param_password">password</string>

    <string name="const_set_cookie">Set-Cookie</string>
    <string name="const_cookie_domain">https://mypage.groovecoaster.jp</string>

    <integer name="status_code_login">100</integer>

    <string name="dialog_title_login">ログイン中</string>
    <string name="dialog_title_play_data">プレイヤーデータ取得中</string>
    <string name="dialog_title_music_data">ミュージックデータ取得中</string>
    
    <string name="toast_login_successful">ログインに成功しました</string>
    <string name="toast_login_failed">ログインに失敗しました</string>
    
    <string name="tv_player_data_total_score">Total Score</string>
    <string name="tv_player_data_rank">Rank</string>
    <string name="tv_player_data_coin">Coin</string>
    <string name="tv_player_data_trophy">Trophy</string>

    <string name="tv_music_result_title">Statistics</string>
    <string name="tv_music_result_play_music">Play Music</string>
    <string name="tv_music_result_clear_stage">Clear Stage</string>
    <string name="tv_music_result_average_score">Average Score</string>
    <string name="tv_music_result_no_miss">NO MISS</string>
    <string name="tv_music_result_full_chain">FULL CHAIN</string>
    <string name="tv_music_result_s">S</string>
    <string name="tv_music_result_ss">S+</string>
    <string name="tv_music_result_sss">S++</string>

    <string name="tv_music_detail_detail">DETAIL</string>
    <string name="tv_music_detail_num_of_plays">Num of plays</string>
    <string name="tv_music_detail_last_played">Last played</string>
    <string name="tv_music_detail_skin">Skin</string>
    <string name="tv_music_detail_title_simple">SIMPLE</string>
    <string name="tv_music_detail_title_normal">NORMAL</string>
    <string name="tv_music_detail_title_hard">HARD</string>
    <string name="tv_music_detail_title_extra">EXTRA</string>

    <string name="tv_music_detail_score">Score</string>
    <string name="tv_music_detail_rating">Rating</string>
    <string name="tv_music_detail_max_chain">Max Chain</string>
    <string name="tv_music_detail_num_of_full_chain">FULL CHAIN</string>
    <string name="tv_music_detail_num_of_no_miss">NO MISS</string>

    <string name="tv_music_sort_asc">Asc</string>
    <string name="tv_music_sort_desc">Desc</string>
    <string name="tv_music_sort_music_name">Music name</string>
    <string name="tv_music_sort_last_played">Last played</string>
    <string name="tv_music_sort_play_times">Play times</string>
    <string name="tv_music_sort_category">Category</string>

    <string name="tv_music_detail_ranking_score">Score</string>
    <string name="tv_music_detail_ranking_area">Area</string>
    <string name="tv_music_detail_ranking_arcade">Arcade</string>

    <string name="tv_current_event_ranking">Ranking</string>
    <string name="tv_current_event_point">Battle Point</string>
    <string name="tv_current_event_ranking_ranking">Ranking</string>
    <string name="tv_current_event_awards_awards">Awards</string>
    <string name="tv_current_event_awards_avatar">Avatar</string>
    <string name="tv_current_event_awards_title">Title</string>
    <string name="tv_current_event_awards_item">Item</string>
    <string name="tv_current_event_awards_trophy">Trophy</string>
    <string name="tv_current_event_awards_dest_awards">Awards(Destination)</string>
    <string name="tv_current_event_awards_dest_ranking">Ranking</string>
    <string name="tv_current_event_awards_dest_point">Battle Point</string>
    <string name="tv_current_event_awards_dest_avatar">Avatar</string>
    <string name="tv_current_event_awards_dest_title">Title</string>
    <string name="tv_current_event_awards_dest_item">Item</string>
    <string name="tv_current_event_awards_dest_trophy"></string>

</resources>
