<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dialog_radio_padding"
        android:layout_marginBottom="@dimen/dialog_radio_padding">

        <RadioButton
            android:id="@+id/radio_asc"
            android:text="@string/tv_music_sort_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginRight="@dimen/dialog_radio_item_margin"/>

        <RadioButton
            android:id="@+id/radio_desc"
            android:text="@string/tv_music_sort_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_radio_item_margin"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider"
        android:showDividers="middle"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding_top"
            android:paddingBottom="@dimen/list_padding_bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/list_padding_left"
                android:paddingRight="@dimen/list_padding_right"
                android:src="@android:drawable/ic_menu_sort_alphabetically" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tv_music_sort_music_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding_top"
            android:paddingBottom="@dimen/list_padding_bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/list_padding_left"
                android:paddingRight="@dimen/list_padding_right"
                android:src="@android:drawable/ic_menu_week" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tv_music_sort_last_played" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding_top"
            android:paddingBottom="@dimen/list_padding_bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/list_padding_left"
                android:paddingRight="@dimen/list_padding_right"
                android:src="@android:drawable/ic_menu_sort_by_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tv_music_sort_play_times" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding_top"
            android:paddingBottom="@dimen/list_padding_bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/list_padding_left"
                android:paddingRight="@dimen/list_padding_right"
                android:src="@android:drawable/ic_menu_info_details" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tv_music_sort_category" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>