<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/list_padding_bottom"
        android:paddingLeft="@dimen/list_padding_left"
        android:paddingRight="@dimen/list_padding_right"
        android:paddingTop="@dimen/list_padding_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/list_padding_bottom">

            <TextView
                android:id="@+id/tv_music_detail_ranking_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/small_size" />

            <TextView
                android:id="@+id/tv_music_detail_ranking_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="@dimen/small_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_music_detail_ranking_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/list_padding_bottom"
            android:textColor="@color/dark_glay"
            android:textSize="@dimen/small_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow android:paddingBottom="@dimen/list_padding_bottom">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingRight="@dimen/list_padding_right"
                        android:text="@string/tv_music_detail_ranking_score"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />

                    <TextView
                        android:id="@+id/tv_music_detail_ranking_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />
                </TableRow>

                <TableRow android:paddingBottom="@dimen/list_padding_bottom">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingRight="@dimen/list_padding_right"
                        android:text="@string/tv_music_detail_ranking_area"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />

                    <TextView
                        android:id="@+id/tv_music_detail_ranking_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />
                </TableRow>

                <TableRow android:paddingBottom="@dimen/list_padding_bottom">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingRight="@dimen/list_padding_right"
                        android:text="@string/tv_music_detail_ranking_arcade"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />

                    <TextView
                        android:id="@+id/tv_music_detail_ranking_arcade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>